<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AWGReferenceActivity!</string>
    <string name="app_name">Real AWG Wire</string>
    
    <string name="diameter_inch">Diameter (in):</string>
    <string name="diameter_mm">Diameter (mm):</string>
    <string name="area_kcmil">Area (kcmil):</string>
    <string name="area_mm2">Area (mm^2):</string>
    <string name="res_mohm_per_ft">Resistance (mOhm/ft):</string>
    <string name="res_mohm_per_m">Resistance (mOhm/m):</string>
    <string name="num_strand">Number of strands:</string>
    <string name="strand_dia_in">strand diameter (in):</string>
    <string name="strand_dia_mm">strand diameter (mm):</string>
    <string name="na">N/A</string>
    <string name="show_actual_size">Show actual wire size</string>
    <string name="only_copper_real">Note: only copper represents actual size.</string>
    <string name="uncoated_copper">Note: values are for uncoated copper.</string>
	
    <string-array name="scrn_dim_unit">
        <item>millimeters</item>
        <item>inches</item>
    </string-array>
	
    <string name="ok">OK</string>
    <string name="dlg_title">invalid input</string>
    <string name="dlg_msg_recognize">Invalid or no input number</string>
    <string name="dlg_msg_negzero">Width and height should be positive!</string>
    <string name="dlg_msg_result">Invalid result in dpi calculation!</string>
    
    <!-- The text for calibration screen -->
    <string name="cali_inst">Instructions</string>
    <string name="cali_unit">Unit:</string>
    <string name="cali_height">measured height:</string>
    <string name="cali_width">measured width:</string>
    <string name="cali_apply">Apply</string>
    <string name="cali_close">Close</string>
    <string name="cali_reset">Reset</string>
    
</resources>