<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/cn.songshan99.AWGDisplayView"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow>
        <TextView
            android:layout_column="0"
            android:text="AWG size:"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/LightSkyBlue" />

        <Spinner
            android:id="@+id/spinnerAWG"
            android:gravity="center"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>
        <TextView
            android:id="@+id/textViewDiameter"
            android:layout_column="0"
            android:text="@string/diameter_mm"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/PaleGreen" />
        <TextView
            android:id="@+id/textViewDiameterNum"
            android:layout_column="1"
            android:text="@string/na"
            android:gravity="center"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewArea"
            android:layout_column="0"
            android:text="@string/area_mm2"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/PaleGreen" />
        <TextView
            android:id="@+id/textViewAreaNum"
            android:layout_column="1"
            android:text="@string/na"
            android:gravity="center"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:id="@+id/textViewResistance"
            android:layout_column="0"
            android:text="@string/res_mohm_per_m"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/PaleGreen" />
        <TextView
            android:id="@+id/textViewResistanceNum"
            android:layout_column="1"
            android:text="@string/na"
            android:gravity="center"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
    
    <TableRow>
        <TextView
            android:id="@+id/textViewNumStrand"
            android:layout_column="0"
            android:text="@string/num_strand"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/LightSkyBlue" />
        <TextView
            android:id="@+id/textViewNumStrandNum"
            android:layout_column="1"
            android:text="@string/na"
            android:gravity="center"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:id="@+id/textViewStrandDia"
            android:layout_column="0"
            android:text="@string/strand_dia_mm"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/LightSkyBlue" />
        <TextView
            android:id="@+id/textViewStrandDiaNum"
            android:layout_column="1"
            android:text="@string/na"
            android:gravity="center"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
	<View
        android:layout_height="2dip"
        android:background="#FF909090" />
        
    <TableRow>
        <TextView
            android:layout_column="0"
            android:text="Fusing current (A):"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/LightPink" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="0"
            android:text="Preece (~10s):"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/LightPink" />
        <TextView
            android:id="@+id/textViewFuseCurrPreece10sNum"
            android:layout_column="1"
            android:text="@string/na"
            android:gravity="center"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_column="0"
            android:text="Onderdonk (~1s):"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/LightPink" />
        <TextView
            android:id="@+id/textViewFuseCurrOnderdonk1sNum"
            android:layout_column="1"
            android:text="@string/na"
            android:gravity="center"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_column="0"
            android:text="Onderdonk (~30ms):"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/LightPink" />
        <TextView
            android:id="@+id/textViewFuseCurrOnderdonk30msNum"
            android:layout_column="1"
            android:text="@string/na"
            android:gravity="center"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uncoated_copper"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/LemonChiffon"
        android:singleLine="false" />
    
	<Button
	    android:id="@+id/buttonShowActualSize"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/show_actual_size" />
   
</TableLayout>
